--- a/index.html
+++ b/index.html
@@ -1,15 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="im\logo.jpg" />
+
+
+
     <link rel="stylesheet" href="style.css">
     <title>Roshui Britti</title>
 </head>
+
 <body>
-    <section>
-        
+    <section id="header-section">
+        <!-- banner part -->
+
+        <div class="header-div">
+            <h1>Diet!!!</h1> <br>
+            <h3> Chill, Forget about diet, and enjoy the delicious food with
+                <span class="diff_fnt">Roshui Britti. </span>
+            </h3> <br>
+            <p>Don't worry about dieting! Enjoy the mouth watering 🤤 food from us. We will try to give you onr of the
+                best
+                food you have ever tested. We are providing homemade food items.😍 My mother prepares these foods after
+                getting an order from you.😇 We are trying to provide fresh, halal & quality food at a reasonable
+                price.🤤🤤 </p>
+
+            <a href="https://www.facebook.com/RoshuiBritti" target="_blank">Order Now</a>
+        </div>
+
+
+        <div class="header-div">
+            <img src="im\logo.jpg" alt="">
+
+        </div>
+
     </section>
+
 </body>
+
 </html>
