--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
             </div>
 
             <div class="box">
-                <img id="box-img" src="/im/somucha 1.jpg" alt="">
-                <h1 id="box-h1">Somucha</h1>
+                <img id="box-img" src="/im/set menu.jpg" alt="">
+                <h1 id="box-h1">Mixed Set Menu</h1>
                 <p id="box-p">Here we are presenting double layer pudding. <br> This wonderful dessert have a layer one
                     caramel <br> and a layer of chocolate. It is so much delicious. </p>
             </div>
@@ -158,13 +158,20 @@
         <div class="long-box">
 
             <div id="lb1">
-                <p>1.4 K</p> Instagram Followers
+                <p>1.4 K</p> 
+                <img style="height: 60px;" src="/im/2048px-Instagram_icon.png" alt="">
+                <p>Instagram Followers</p> 
             </div>
             <div id="lb2">
-                <p>100 K </p> Facebook Followers
+                <p>100 K </p>
+                <img style="height: 70px;" src="/im/facebook-new.png" alt="">
+                <p>Facebook Followers</p>
+                
             </div>
             <div id="lb2">
-                <p>1.6 k</p> Youtube Followers
+                <p>1.6 k</p>
+                <img style="height: 60px;" src="/im/yt.png" alt="">
+                <p>Youtube Followers</p> 
             </div>
         </div>
 
